Bug 1919160 - Stop reporting facingMode on mac laptops and desktops;r=jib

Differential Revision: https://phabricator.services.mozilla.com/D228218